--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,13 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.8",
-    "react-transition-group": "^4.4.3",
+    "react-transition-group": "^4.4.4",
     "use-reducer-logger": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
