--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.8",
+    "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.4",
     "use-reducer-logger": "^1.0.2",
     "web-vitals": "^2.1.4"
