--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node ./server -e js,hbs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
